--- a/index.css
+++ b/index.css
@@ -3,9 +3,9 @@ body {
     text-align: center;
     background: #1F2937;
     color: #FFFFFF;
-    height: 550px;
-    width: 550px;
-    margin: 61px auto;
+    max-height: 20em;
+    max-width: 550px;
+    margin: 7em auto;
     
 }
 .greentext{
@@ -16,9 +16,9 @@ body {
     border: none;
     border-radius: 10px;
     color: #FFFFFF;
-    width: 200px;
-    height: 50px;
-    margin-top: 50px;
+    max-width: 200px;
+    height: 3.2em;
+    margin-top: 3em;
     font-weight: bolder;
     box-shadow: 1px 1px 50px #4ADF86;
     text-shadow: 1px 1px 10px black;
@@ -31,8 +31,8 @@ body {
 .password{
     background: #1F2937;
     border-radius: 6px;
-    padding: 5px;
-    margin: 15px auto;
+    padding: 0.4em;
+    margin: 1em auto;
     
     
 }
@@ -41,12 +41,19 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    height: 50px;
-    margin-top: 70px;
+    height: 4em;
+    margin-top: 4em;
     
 }
 #line{
     border-bottom: 1px solid #2F3E53;
-    margin-top: 70px;
+    margin-top: 4.5em;
     box-shadow: 3px 3px 3px #4ADF86;
 }
+
+.container{
+    max-width: 100%;
+    width: 90%;
+    max-height: 100vh;
+    margin: 0 auto;
+}   
